feat: 添加了vuex插件
1、添加了vuex来保存管理全局状态。2、修复了mock-server中天气接口返回背景图片路径不对的问题。

--- a/src/pages/weather/weather.scss
+++ b/src/pages/weather/weather.scss
@@ -142,6 +142,8 @@ icon {
     .inline {
       margin-bottom: 30rpx;
       font-size: 32rpx;
+      // display: flex;
+      // justify-content: center;
       &:last-child {
         margin-bottom: 0;
       }
